--- a/stylesheet.css
+++ b/stylesheet.css
@@ -154,7 +154,7 @@ a:active {
 
 body{
 	background-image: url("mountain.jpg");
-	object-fit:fill;
+	object-fit:cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	margin-top: 0px;
