--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@
 
 #main{
 	font-family:verdana;
-	font-size:2em;
+	font-size:1em;
 	padding:50px 50px 50px 50px;
 	/*height:100%;*/
 	margin: auto;
@@ -45,7 +45,7 @@
 #about{
 	background-color: #bdc3ca;
 	font-family:verdana;
-	font-size:5em;
+	font-size:1em;
 	padding:50px 50px 50px 50px;
 	/*height:100%;*/
 	margin: auto;
@@ -60,7 +60,7 @@
 #cmsc{
 	/*background-color: #686c75;*/
 	font-family:verdana;
-	font-size:5em;
+	font-size:1em;
 	padding:70px 50px 50px 50px;
 	/*height:100%;*/
 	margin: auto;
@@ -80,7 +80,7 @@
 #others{
 	background-color: #5b718a;
 	font-family:verdana;
-	font-size:5em;
+	font-size:1em;
 	padding:70px 50px 50px 50px;
 	height:100%;
 	list-style-type: none;
@@ -157,6 +157,8 @@ body{
 	object-fit:cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+	height:100%;
+	width:100%;
 	margin-top: 0px;
     margin-bottom: 0px;
 	margin-right: 0px;
