--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@
 		text-decoration:none;
 		text-transform: uppercase;
 		height:50px;
-		width:100%;
+		width:1350px;
 		z-index: 5;
 		border-bottom: 1px solid white;;
 		/*margin: 0px 40px 0px 40px;*/
